# minivess-mlops

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .hadolint.yaml  .pre-commit-config.yaml  .sky.yaml  .skyignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  LEARNINGS.md  LICENSE  Makefile  README.md  dvc.yaml  justfile  pyproject.toml  pytest-staging.ini
.claude/: cold-start-drift-detection-session2.md  cold-start-pr-c-and-pr-a.md  cold-start-pr-d-and-pr-e.md  cold-start-pre-gcp-qa-session.md  context-management-upgrade-plan.md  phase-tracker.md  plan-graph.md  scripting-research.md  settings.json
.claude/commands/: sync-roadmap.md
.claude/metalearning/: 2026-03-02-sam3-implementation-fuckup.md  2026-03-02-session-failure-self-reflection.md  2026-03-02-xml-plan-not-saved-to-disk.md  2026-03-04-skip-mypy-hook-failure.md  2026-03-05-silent-fallback-failure.md  2026-03-06-regex-ban.md  2026-03-06-standalone-script-antipattern.md  2026-03-07-ci-reenabled-without-permission.md  2026-03-07-docker-volume-mount-violation.md  2026-03-07-prefect-not-installed-training-never-verified.md  2026-03-07-silent-existing-failures.md  2026-03-07-worktree-parallel-execution-friction.md  2026-03-08-sqlite-fallback-bias.md  2026-03-09-claudecode-nested-session-silent-failure.md  2026-03-09-dotenv-docker-compose-v2.md  2026-03-09-infrastructure-shortcut-ban.md  2026-03-09-missing-hyperlinks-academic-references.md  2026-03-09-overnight-script-silent-freeze.md  2026-03-10-silent-test-skips-optional-deps.md  2026-03-13-vram-estimate-inconsistency.md  2026-03-14-asking-instead-of-checking.md  2026-03-14-cloud-test-skip-amnesia.md  2026-03-14-docker-resistance-anti-pattern.md  2026-03-14-failed-to-follow-gcp-instructions.md  2026-03-14-false-blockers-devex-failure.md  2026-03-14-lazy-reading-misunderstanding-propagation.md  2026-03-14-mlflow-version-mismatch-fuckup.md  2026-03-14-poor-repo-vision-understanding.md  2026-03-14-runpod-container-not-vm.md  2026-03-14-runpod-skypilot-root-user.md  2026-03-14-skyignore-gotchas.md  2026-03-14-skypilot-bare-vm-docker-violation.md  2026-03-14-skypilot-purpose-misunderstanding.md  2026-03-14-wall-of-text-bad-ux.md  2026-03-15-amp-validation-nan-3d.md  2026-03-15-gcp-artifact-upload-success.md  2026-03-15-hydra-override-plus-prefix-bug.md  2026-03-15-kg-mamba-missing-scope-blindness.md  2026-03-15-pulumi-passphrase-bypass-antipattern.md  2026-03-15-ralph-loop-not-auto-activated.md  (+91 more)
.claude/plan-context-upgrade/: design.md  execution-plan.xml
.claude/rules/: data-on-gcs.md  docker-monitoring.md  no-state-questions.md  no-unauthorized-infra.md  planning-sop.md  two-providers-only.md  verify-beyond-cutoff.md
.claude/skills/: NEW-SKILL-GUIDE.md  qa-single-source-of-truth-yaml-quality-scanner-plan.md  skills-upgrade-plan-march2026.md
.claude/templates/: plan-frontmatter.md
.duckdb-skills/: state.sql
.dvc/: config
.github/workflows/: build-env_image.yml  build_train_image.yml  ci-v2.yml  docker-build-gate.yml  test_train.yml
_archive/sam2_reference/: README.md
configs/: README.md  base.yaml  method_capabilities.yaml  metric_registry.yaml
configs/augmentation/: default.yaml
configs/biostatistics/: default.yaml  local_dynunet.yaml  local_dynunet_debug.yaml  smoke_local.yaml  smoke_mini.yaml
configs/checkpoint/: lightweight.yaml  standard.yaml
configs/cloud/: gcp_quotas.yaml  gcp_spot.yaml  local.yaml  runpod_dev.yaml  yaml_contract.yaml
configs/dashboard/: health_thresholds.yaml
configs/data/: minivess.yaml
configs/deployment/: .secrets.toml.example  airgapped.toml  development.toml  production.toml  settings.toml  staging.toml
configs/dvc/: remotes.yaml
configs/evaluation/: default.yaml
configs/experiment/: __init__.py  acquisition.yaml  config_store.py  debug_all_models.yaml  debug_data_validation.yaml  debug_factorial.yaml  debug_full_pipeline.yaml  debug_mambavesselnet.yaml  debug_multi_loss.yaml  debug_single_model.yaml  dynunet_all_losses_debug.yaml  dynunet_boundary_losses.yaml  dynunet_d2c_ablation.yaml  dynunet_e2e_debug.yaml  dynunet_graph_topology.yaml  dynunet_graph_topology_debug.yaml  dynunet_half_width.yaml  dynunet_losses.yaml  dynunet_multitask_ablation.yaml  dynunet_tffm_ablation.yaml  dynunet_topology.yaml  dynunet_topology_all_approaches.yaml  factorial_base.yaml  (+31 more)
deployment/: CLAUDE.md  README.md  docker-compose.flows.yml  docker-compose.yml
docs/: 2026-03-20-full-factorial-is-not-24-cells.md  MetricsReloaded.html  claude-code-patterns.md  github-projects-improvement-plan.md  modernize-minivess-mlops-plan.md
frontend/: index.html  package.json  vite.config.ts
knowledge-graph/: _network.yaml  _schema.yaml  bibliography.yaml  navigator.yaml
observable/: observablehq.config.js  package.json
openspec/: config.yaml  project.md
outputs/: ralph_diagnoses.jsonl
probabilistic-sdd-template/: CLAUDE-TEMPLATE.md  GUIDE.md  _network-template.yaml  _schema.yaml  backbone-defaults.yaml  validate.py
scripts/: _rotate_credentials.py  analyze_factorial_run.py  analyze_sam3_experiment.py  assemble_paper_artifacts.py  audit_hydra_configs.py  build_config_graph.py  build_metalearning_index.py  build_plan_archive.py  check_projection_staleness.py  check_version_pins.py  classify_plan_docs.py  cleanup_mlflow_runs.py  collect_availability.py  compare_experiments.py  configure_dvc_remote.py  context_analytics.py  diagnose_mlruns.py  download_minivess.py  evaluate_sam3_comparison.py  export_duckdb_parquet.py  extract_per_volume_from_checkpoints.py  finetune_vesselfm_runpod.sh  generate_audit_report.py  generate_real_figures.py  generate_sam3_report.py  health_regression_gate.py  healthcheck_cpu.py  healthcheck_training.py  hetzner-setup-script.sh  hpo_worker_entrypoint.sh  index_planning_docs.py  init_mlflow_auth.sh  install-hooks.sh  launch_dev_runpod.py  launch_smoke_test.py  oci-cloud-shell-paste-this.sh  oracle-bootstrap-local-key.sh  oracle-setup-script.sh  overnight_debug_loop.sh  parse_test_output.py  (+64 more)
state/: tdd-state.json
tests/: CLAUDE.md  conftest.py  health_baseline.json  skip_allowlist.yaml
(+2366 files in other folders)
