# MinIVess MLOps v2 — Modern pyproject.toml (uv + PEP 621)
# Replaces Poetry-based v0.1 configuration.
# Managed exclusively by uv. Never use pip, conda, or poetry.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minivess-mlops"
version = "2.0.0-alpha"
description = "Model-agnostic biomedical segmentation MLOps platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "petteriteikari", email = "petteri.teikari@gmail.com" },
]
keywords = ["mlops", "segmentation", "biomedical", "monai", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ML Core
    "torch>=2.5",
    "monai>=1.4",
    "peft>=0.14",
    "torchio>=0.20",
    "torchmetrics>=1.6",

    # Config & Validation
    "hydra-zen>=0.13",
    "dynaconf>=3.2",
    "pydantic>=2.10",

    # Experiment Tracking
    "mlflow>=3.10",
    "dvc[s3,gs]>=3.66",
    "optuna>=4.7",
    "duckdb>=1.2",

    # Evaluation
    "MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded@monai-support",
    "mapie>=1.0",

    # Serving
    "bentoml>=1.4",

    # Observability
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "evidently>=0.7",

    # Agent Orchestration
    "langgraph>=0.4",

    # Code Quality
    "ruff>=0.9",

    # Retained from v0.1
    "weightwatcher>=0.7",
]

[project.optional-dependencies]
eval = [
    "deepchecks[vision]>=0.18",
    "weightwatcher>=0.7",
    "captum>=0.7",
    "shap>=0.46",
    "netcal>=1.3",
    "mapie>=1.0",
    "quantus>=0.5",
]
quality = [
    "pandera>=0.22",
    "great-expectations>=1.3",
    "cleanlab>=2.7",
    "whylogs>=1.5",
]
dev = [
    "hypothesis>=6.115",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]
agents = [
    "langgraph>=0.4",
    "langfuse>=2.56",
    "braintrust>=0.0.180",
    "litellm>=1.56",
]
serving = [
    "bentoml>=1.4",
    "onnxruntime>=1.20",
    "gradio>=5.12",
]
ci = [
    # cml>=0.20 — disabled: PyPI 'cml' is a different package than iterative CML;
    # iterative CML is installed via npm, not pip.
]

[project.urls]
Homepage = "https://github.com/petteriTeworworx/minivess-mlops"
Repository = "https://github.com/petteriTeworworx/minivess-mlops"
Documentation = "https://github.com/petteriTeworworx/minivess-mlops/tree/main/docs"
Issues = "https://github.com/petteriTeworworx/minivess-mlops/issues"

# ---------------------------------------------------------------------------
# Build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minivess"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line-too-long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["minivess"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "monai.*",
    "torch.*",
    "torchio.*",
    "torchmetrics.*",
    "mlflow.*",
    "optuna.*",
    "dvc.*",
    "bentoml.*",
    "evidently.*",
    "langgraph.*",
    "langfuse.*",
    "braintrust.*",
    "litellm.*",
    "captum.*",
    "shap.*",
    "deepchecks.*",
    "weightwatcher.*",
    "cleanlab.*",
    "whylogs.*",
    "pandera.*",
    "great_expectations.*",
    "netcal.*",
    "mapie.*",
    "quantus.*",
    "gradio.*",
    "onnxruntime.*",
    "hydra_zen.*",
    "dynaconf.*",
    "peft.*",
    "duckdb.*",
    "MetricsReloaded.*",
    "scipy.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
    "--tb=short",
]
markers = [
    "unit: Fast isolated unit tests",
    "integration: Integration tests requiring services",
    "e2e: End-to-end pipeline tests",
    "slow: Tests that take >30s",
    "gpu: Tests requiring CUDA GPU",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::UserWarning:torch.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::UserWarning:torchmetrics.*",
    "ignore::SyntaxWarning:MetricsReloaded.*",
    "ignore::FutureWarning",
    "ignore:.*deprecated.*:DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/minivess"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

# ---------------------------------------------------------------------------
# uv — workaround for MetricsReloaded missing pkg_resources build dep
# (pkg_resources removed from setuptools >=82 on Python 3.14)
# ---------------------------------------------------------------------------
[tool.uv]
build-constraint-dependencies = [
    "setuptools<82",
]
# weightwatcher pins pandas==2.1.4 which fails to build from source on Python 3.13+
override-dependencies = [
    "pandas>=2.2",
]
