# MinIVess MLOps v2 — Modern pyproject.toml (uv + PEP 621)
# Replaces Poetry-based v0.1 configuration.
# Managed exclusively by uv. Never use pip, conda, or poetry.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minivess-mlops"
version = "2.0.0-alpha"
description = "Model-agnostic biomedical segmentation MLOps platform"
readme = "README.md"
license = "MIT"
requires-python = "==3.13.*"
authors = [
    { name = "petteriteikari", email = "petteri.teikari@gmail.com" },
]
keywords = ["mlops", "segmentation", "biomedical", "monai", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ML Core
    "torch>=2.5,<3.0",
    "monai>=1.4,<2.0",
    "peft>=0.14,<1.0",
    "torchio>=0.20,<1.0",
    "torchmetrics>=1.6,<2.0",
    # Config & Validation
    "hydra-zen>=0.13,<1.0",
    "dynaconf>=3.2,<4.0",
    "pydantic>=2.10,<3.0",
    # Experiment Tracking
    "mlflow>=3.10,<4.0",
    "dvc[s3,gs]>=3.66,<4.0",
    "optuna>=4.7,<5.0",
    "duckdb>=1.2,<2.0",
    # Evaluation
    "MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded@monai-support",
    "mapie>=1.0,<2.0",
    # Serving
    "bentoml>=1.4,<2.0",
    # Observability
    "opentelemetry-api>=1.29,<2.0",
    "opentelemetry-sdk>=1.29,<2.0",
    "evidently>=0.7,<1.0",
    # Agent Orchestration
    "langgraph>=0.4,<1.0",
    # Code Quality
    "ruff>=0.9,<1.0",
    # Retained from v0.1
    "weightwatcher>=0.7,<1.0",
    "openlineage-python>=1.26,<2.0",
    "nibabel>=5.3.3",
    "onnx>=1.20.1",
]

[project.optional-dependencies]
eval = [
    "deepchecks[vision]>=0.18,<1.0",
    "weightwatcher>=0.7,<1.0",
    "captum>=0.7,<1.0",
    "shap>=0.46,<1.0",
    "netcal>=1.3,<2.0",
    "mapie>=1.0,<2.0",
    "quantus>=0.5,<1.0",
]
quality = [
    "pandera>=0.22,<1.0",
    "great-expectations>=1.3,<2.0",
    "cleanlab>=2.7,<3.0",
    "whylogs>=1.5,<2.0",
]
dev = [
    "hypothesis>=6.115,<7.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-xdist>=3.5,<4.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
    "pre-commit>=4.0,<5.0",
]
agents = [
    "langgraph>=0.4,<1.0",
    "langfuse>=2.56,<3.0",
    "braintrust>=0.0.180,<1.0",
    "litellm>=1.56,<2.0",
]
serving = [
    "bentoml>=1.4,<2.0",
    "onnxruntime>=1.20,<2.0",
    "onnxscript>=0.6.2,<1.0",
    "gradio>=5.12,<6.0",
]
ci = [
    # cml>=0.20 — disabled: PyPI 'cml' is a different package than iterative CML;
    # iterative CML is installed via npm, not pip.
]

[project.urls]
Homepage = "https://github.com/petteriTeworworx/minivess-mlops"
Repository = "https://github.com/petteriTeworworx/minivess-mlops"
Documentation = "https://github.com/petteriTeworworx/minivess-mlops/tree/main/docs"
Issues = "https://github.com/petteriTeworworx/minivess-mlops/issues"

# ---------------------------------------------------------------------------
# Build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minivess"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line-too-long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["minivess"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "monai.*",
    "torch.*",
    "torchio.*",
    "torchmetrics.*",
    "mlflow.*",
    "optuna.*",
    "dvc.*",
    "bentoml.*",
    "evidently.*",
    "langgraph.*",
    "langfuse.*",
    "braintrust.*",
    "litellm.*",
    "captum.*",
    "shap.*",
    "deepchecks.*",
    "weightwatcher.*",
    "cleanlab.*",
    "whylogs.*",
    "pandera.*",
    "great_expectations.*",
    "netcal.*",
    "mapie.*",
    "quantus.*",
    "gradio.*",
    "onnxruntime.*",
    "hydra_zen.*",
    "dynaconf.*",
    "peft.*",
    "duckdb.*",
    "MetricsReloaded.*",
    "scipy.*",
    "nibabel.*",
    "prefect.*",
    "pandas.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
    "--tb=short",
]
markers = [
    "unit: Fast isolated unit tests",
    "integration: Integration tests requiring services",
    "e2e: End-to-end pipeline tests",
    "slow: Tests that take >30s",
    "gpu: Tests requiring CUDA GPU",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::UserWarning:torch.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::UserWarning:torchmetrics.*",
    "ignore::UserWarning:monai.*",
    "ignore::UserWarning:mlflow.*",
    "ignore::SyntaxWarning:MetricsReloaded.*",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/minivess"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

# ---------------------------------------------------------------------------
# uv — workaround for MetricsReloaded missing pkg_resources build dep
# (pkg_resources removed from setuptools >=82 on Python 3.14)
# ---------------------------------------------------------------------------
[tool.uv]
build-constraint-dependencies = [
    "setuptools<82",
]
# weightwatcher pins pandas==2.1.4 which fails to build from source on Python 3.13+
override-dependencies = [
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
