# MinIVess MLOps v2 — Modern pyproject.toml (uv + PEP 621)
# Replaces Poetry-based v0.1 configuration.
# Managed exclusively by uv. Never use pip, conda, or poetry.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minivess-mlops"
version = "2.0.0-alpha"
description = "Model-agnostic biomedical segmentation MLOps platform"
readme = "README.md"
license = "MIT"
requires-python = "==3.13.*"
authors = [
    { name = "petteriteikari", email = "petteri.teikari@gmail.com" },
]
keywords = ["mlops", "segmentation", "biomedical", "monai", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ML Core
    "torch>=2.5,<3.0",
    "monai>=1.4,<2.0",
    "peft>=0.14,<1.0",
    "torchio>=0.20,<1.0",
    "torchmetrics>=1.6,<2.0",
    # Config & Validation
    "hydra-zen>=0.13,<1.0",
    "dynaconf>=3.2,<4.0",
    "pydantic>=2.10,<3.0",
    # Experiment Tracking
    "mlflow>=3.10,<4.0",
    "boto3>=1.35,<2.0",        # S3/MinIO artifact store for MLflow
    "psycopg2-binary>=2.9,<3.0",  # PostgreSQL backend for MLflow
    "dvc[s3,gs]>=3.66,<4.0",
    "optuna>=4.7,<5.0",
    "duckdb>=1.2,<2.0",
    # Evaluation
    "MetricsReloaded @ git+https://github.com/Project-MONAI/MetricsReloaded@monai-support",
    "mapie>=1.0,<2.0",
    # Serving
    "bentoml>=1.4,<2.0",
    # Orchestration
    "prefect>=3.4,<4.0",
    # Observability
    "opentelemetry-api>=1.29,<2.0",
    "opentelemetry-sdk>=1.29,<2.0",
    "evidently>=0.7.21,<1.0",
    # Agent Orchestration — pydantic-ai is in [agents] optional group
    # to avoid dependency conflicts with whylogs (platformdirs version)
    # Code Quality
    "ruff>=0.9,<1.0",
    # Retained from v0.1
    "weightwatcher>=0.7,<1.0",
    "openlineage-python>=1.26,<2.0",
    "nibabel>=5.3.3",
    "onnx>=1.20.1",
    "gudhi>=3.11.0",
    "skan>=0.13.1",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.590.48",
    # grpcio 1.78.1 was yanked (gcloud outage). Exclude it explicitly.
    "grpcio>=1.78.0,!=1.78.1",
    "seaborn>=0.13.2",
    "onnxruntime>=1.24.2",
    "torchvision>=0.25.0",
    "scikit-posthocs>=0.11",
    "pingouin>=0.5",
    "baycomp>=1.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
eval = [
    "deepchecks[vision]>=0.18,<1.0",
    "weightwatcher>=0.7,<1.0",
    "captum>=0.7,<1.0",
    "shap>=0.46,<1.0",
    "netcal>=1.3,<2.0",
    "mapie>=1.0,<2.0",
    "quantus>=0.5,<1.0",
]
quality = [
    "pandera>=0.22,<1.0",
    "great-expectations>=1.3,<2.0",
    "cleanlab>=2.7,<3.0",
    "whylogs>=1.5,<2.0",
    # alibi-detect[torch]>=0.12 — BLOCKED: requires numpy<2.0, project needs numpy>=2.0
    # See: docs/planning/drift-monitoring-implementation-plan.xml T1 spec adaptation
    # T3 uses scipy.stats.permutation_test for MMD p-values instead
]
dev = [
    "hypothesis>=6.115,<7.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "pytest-xdist>=3.5,<4.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
    "pre-commit>=4.0,<5.0",
]
agents = [
    "pydantic-ai-slim[prefect,anthropic,openai]>=1.60,<2.0",
    "langfuse>=2.56,<3.0",
    "braintrust>=0.0.180,<1.0",
    "langgraph>=0.4,<1.0",
    "litellm>=1.70,<2.0",
]
sam = [
    "sam2>=1.0,<2.0",
]
serving = [
    "bentoml>=1.4,<2.0",
    "onnxruntime>=1.20,<2.0",
    "onnxscript>=0.6.2,<1.0",
    "gradio>=5.12,<6.0",
]
hydra = [
    # hydra-core is already pulled in by hydra-zen (core dep).
    # This group exists for explicit documentation only.
    "hydra-core>=1.3,<2.0",
]
ci = [
    # cml>=0.20 — disabled: PyPI 'cml' is a different package than iterative CML;
    # iterative CML is installed via npm, not pip.
]
infra = [
    "pulumi>=3.0,<4.0",
    "pulumi-upcloud>=0.11,<1.0",
    "pulumi-command>=1.0,<2.0",
    "skypilot-nightly[runpod]>=1.0.0.dev0",
]

[project.urls]
Homepage = "https://github.com/petteriTeworworx/minivess-mlops"
Repository = "https://github.com/petteriTeworworx/minivess-mlops"
Documentation = "https://github.com/petteriTeworworx/minivess-mlops/tree/main/docs"
Issues = "https://github.com/petteriTeworworx/minivess-mlops/issues"

# ---------------------------------------------------------------------------
# Build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minivess"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = ["_archive"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line-too-long (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # sys.path manipulation requires imports after path setup
"tests/*" = ["TC003"]   # Path used at runtime in test bodies (not annotation-only)

[tool.ruff.lint.isort]
known-first-party = ["minivess"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
# Third-party libs without stubs (matplotlib, seaborn, networkx, pynvml, skan,
# sklearn, gudhi) are listed in overrides with ignore_missing_imports.
# The import-untyped error is redundant noise for these known-untyped deps.
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "monai.*",
    "torch.*",
    "torchio.*",
    "torchmetrics.*",
    "mlflow.*",
    "optuna.*",
    "dvc.*",
    "bentoml.*",
    "evidently.*",
    "langgraph.*",
    "langfuse.*",
    "braintrust.*",
    "litellm.*",
    "pydantic_ai.*",
    "captum.*",
    "shap.*",
    "deepchecks.*",
    "weightwatcher.*",
    "cleanlab.*",
    "whylogs.*",
    "pandera.*",
    "great_expectations.*",
    "netcal.*",
    "mapie.*",
    "quantus.*",
    "gradio.*",
    "onnxruntime.*",
    "hydra_zen.*",
    "dynaconf.*",
    "peft.*",
    "duckdb.*",
    "MetricsReloaded.*",
    "scipy.*",
    "nibabel.*",
    "sam2.*",
    "sam3.*",
    "transformers.*",
    "prefect.*",
    "pandas.*",
    "yaml.*",
    "matplotlib.*",
    "seaborn.*",
    "networkx.*",
    "sklearn.*",
    "pynvml.*",
    "skan.*",
    "sky.*",
    "tomli.*",
    "opentelemetry.*",
    "google.*",
    "grpc.*",
    "gudhi.*",
    "onnx.*",
    "onnxscript.*",
]
ignore_missing_imports = true

# Test files: relaxed strictness.
# Tests use dynamic patterns (pytest.mark.parametrize, torch.no_grad, mock
# objects) that produce excessive false positives under strict mode.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = [
    "type-arg", "comparison-overlap", "no-untyped-call", "attr-defined",
    "arg-type", "index", "list-item", "import-not-found", "assignment",
    "operator", "method-assign", "no-untyped-def",
]

# Orchestration flows: Prefect @task/@flow decorators use dynamic typing
# that mypy cannot fully resolve.
[[tool.mypy.overrides]]
module = [
    "minivess.orchestration.flows.*",
    "minivess.orchestration.flows.deploy_flow",
    "minivess.serving.bento_service",
    "minivess.serving.mlflow_wrapper",
    "minivess.compute.prefect_sky_tasks",
]
disallow_untyped_decorators = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["scripts.*", "train_monitored", "run_experiment", "train", "system_monitor"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true
ignore_errors = true

# Validation: pandera DataFrameModel resolves to Any (incomplete stubs),
# and @pa.check / @pa.dataframe_check decorators are untyped.
# whylogs ResultSet also lacks stubs (get_columns → object).
[[tool.mypy.overrides]]
module = ["minivess.validation.*"]
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false

# Archive: SAM2 reference code (archived, not part of active codebase)
[[tool.mypy.overrides]]
module = ["_archive.*"]
ignore_errors = true


# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-x",
    "--tb=short",
    # Disable jaxtyping pytest plugin: it installs beartype's import hook which
    # raises SyntaxError on evidently's text_match.py docstring (Python 3.13
    # invalid escape sequence \d). jaxtyping is a transitive dep via gpytorch.
    "-p", "no:jaxtyping",
]
markers = [
    "unit: Fast isolated unit tests",
    "integration: Integration tests requiring services",
    "e2e: End-to-end pipeline tests",
    "slow: Tests that take >30s",
    "gpu: Tests requiring CUDA GPU",
    "gpu_heavy: GPU-heavy tests (SAM3 forward passes, large model training). These tests live in tests/gpu_instance/ and are excluded from default collection.",
    "model_loading: Tests that instantiate PyTorch models (DynUNet, SegResNet, etc.). Excluded from staging tier via: -m 'not model_loading'",
    "requires_mlflow_server: Tests requiring a running MLflow server (auto-skipped if unhealthy)",
    "requires_docker: Tests requiring a running Docker daemon",
    "requires_train_image: Tests requiring minivess-train Docker image built",
    "gpu_required: Tests requiring a physical CUDA GPU",
    "security_audit: Security posture checks (warnings, not hard failures)",
    "cloud_mlflow: Requires live cloud MLflow deployment (MLFLOW_CLOUD_* env vars)",
    "pulumi: Pulumi IaC validation (no cloud credentials needed)",
    "skypilot_cloud: SkyPilot to remote MLflow integration (cloud + SkyPilot creds)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::UserWarning:torch.*",
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::UserWarning:torchmetrics.*",
    "ignore::UserWarning:monai.*",
    "ignore::UserWarning:mlflow.*",
    "ignore::SyntaxWarning:MetricsReloaded.*",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/minivess"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]

# ---------------------------------------------------------------------------
# uv — workaround for MetricsReloaded missing pkg_resources build dep
# (pkg_resources removed from setuptools >=82 on Python 3.14)
# ---------------------------------------------------------------------------
[tool.uv]
build-constraint-dependencies = [
    "setuptools<82",
]
# weightwatcher pins pandas==2.1.4 which fails to build from source on Python 3.13+
# matplotlib 3.7.x has no wheels for Python 3.13 and fails to build from source
override-dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "allpairspy>=2.5.1",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-docker>=3.2.5",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "types-psutil>=7.2.2.20260130",
]
# Tier B (CPU): biostatistics flow — scipy/pandas/DuckDB analytics, no GPU
cpu = [
    "scipy>=1.14",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13.2",
    "duckdb>=1.2,<2.0",
    "mlflow>=3.10,<4.0",
    "pydantic>=2.10,<3.0",
    "nibabel>=5.3.3",
    "scikit-posthocs>=0.11",
    "pingouin>=0.5",
    "baycomp>=1.0",
    "statsmodels>=0.14",
    "prefect>=3.4,<4.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9,<3.0",
    "boto3>=1.35,<2.0",
    "openlineage-python>=1.26,<2.0",
    "psutil>=7.2.2",
]
# Tier C (Light): dashboard, dashboard-api, pipeline — orchestration/web only
light = [
    "prefect>=3.4,<4.0",
    "httpx>=0.27",
    "pydantic>=2.10,<3.0",
    "mlflow>=3.10,<4.0",
    "boto3>=1.35,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "matplotlib>=3.9",
    "seaborn>=0.13.2",
    "duckdb>=1.2,<2.0",
    "psutil>=7.2.2",
]
